Add explicit build_recreate action
